# Project/backend/controllers/user.js
@@ -1,6 +1,6 @@
-const { User } = require("../models");
+const { user } = require("../models");
 const logger = require("../config/logger");
-const logger2=require("../config/logger2")
+const mylogger=require("../config/logger2")
 const S3 = require("aws-sdk/clients/s3");
 require("dotenv").config("./.env");
 const path = require("path");
@@ -43,14 +43,15 @@ exports.defaultroute = (req, res) => {
   );
 
   //Store logs in mysql(Under Development)
-  var msg = 'test message';
-  logger2.info('first log', {message: msg});
+  mylogger.info(`Get request on Default Route` +
+  "from IP address " +
+  req.ip);
 };
 
 //Start controllers for swagger API
 exports.getuserbyid = (req, res) => {
   // console.log(req.params.id)
-  User.findOne({
+  user.findOne({
     where: {
       id: req.params.id,
     },
@@ -60,8 +61,8 @@ exports.getuserbyid = (req, res) => {
       logger.log("error", error);
       return res.json({ error: "Data does not exist" });
     })
-    .then((User) => {
-      res.json(User);
+    .then((user) => {
+      res.json(user);
     });
   logger.log(
     "info",
@@ -69,10 +70,13 @@ exports.getuserbyid = (req, res) => {
     "from IP address " +
     req.ip
   );
+  mylogger.info(`Get request on getuserbyid Route` +
+  "from IP address " +
+  req.ip);
 };
 
 exports.deleteuserbyidunauth = (req, res) => {
-  User.destroy({
+  user.destroy({
     where: {
       id: req.params.id,
     },
@@ -82,7 +86,7 @@ exports.deleteuserbyidunauth = (req, res) => {
       logger.log("error", error);
       return res.json({ error: "delete action unsuccessful" });
     })
-    .then((User) => {
+    .then((user) => {
       res.json({ msg: "data deleted successfully" });
     });
   logger.log(
@@ -91,16 +95,19 @@ exports.deleteuserbyidunauth = (req, res) => {
       `from IP address ` +
       req.ip
   );
+  mylogger.info(`delete request on deleteuserbyidunauth route` +
+  "from IP address " +
+  req.ip);
 };
 
 exports.deleteuserbyid = (req, res) => {
   console.log(req.body)
-  User.destroy({
+  user.destroy({
     where: {
-      id: req.profile.id,
+      id: req.body.id,
     },
   })
-  .then((User) => {
+  .then((user) => {
     return res.json({ msg: "data deleted successfully" }).status(200);
   })
     .catch((error) => {
@@ -116,6 +123,9 @@ exports.deleteuserbyid = (req, res) => {
       `from IP address ` +
       req.ip
   );
+  mylogger.info(`delete request on deleteuserbyid route` +
+  "from IP address " +
+  req.ip);
 };
 
 exports.updateuserbyidunauth = (req, res) => {
@@ -124,7 +134,7 @@ exports.updateuserbyidunauth = (req, res) => {
   // if(records[0][0]!=null)
   // {
   // console.log(req.headers);
-  User.update(
+  user.update(
     {
       firstname: req.body.fname,
       lastname: req.body.lname,
@@ -135,11 +145,11 @@ exports.updateuserbyidunauth = (req, res) => {
       where: { id: req.body.uid },
     }
   )
-    .then((User) => {
-      if(User==0){
+    .then((user) => {
+      if(user==0){
         return res.json({"error":"No such user exists"})
       }
-      // console.log(User);
+      // console.log(user);
       return res.json({ msg: "data updated successfully" });
     })
     .catch((error) => {
@@ -155,6 +165,9 @@ exports.updateuserbyidunauth = (req, res) => {
     "from IP address "+
     req.ip
   );
+  mylogger.info(`Post request on updateuserbyidunauth route` +
+  "from IP address " +
+  req.ip);
 };
 
 //End of controllers for swagger API
@@ -165,7 +178,7 @@ exports.updateuserbyid = (req, res) => {
   // if(records[0][0]!=null)
   // {
   // console.log(req.headers);
-  User.update(
+  user.update(
     {
       firstname: req.body.fname,
       lastname: req.body.lname,
@@ -176,11 +189,11 @@ exports.updateuserbyid = (req, res) => {
       where: { id: req.profile.id },
     }
   )
-    .then((User) => {
-      if(User==0){
+    .then((user) => {
+      if(user==0){
         return res.json({"msg":"No such user exists"})
       }
-      // console.log(User);
+      // console.log(user);
       return res.json({ msg: "data updated successfully" });
     })
     .catch((error) => {
@@ -196,11 +209,14 @@ exports.updateuserbyid = (req, res) => {
     "from IP address "+
     req.ip
   );
+  mylogger.info(`Post request on updateuserbyid route` +
+  "from IP address " +
+  req.ip);
 };
 
 exports.findallusersbyfname = (req, res) => {
   // console.log(req.params.id)
-  User.findAll({
+  user.findAll({
     where: {
       firstname: req.params.fname,
     },
@@ -210,8 +226,8 @@ exports.findallusersbyfname = (req, res) => {
       logger.log("error", error);
       return res.json({ error: "Data does not exist" });
     })
-    .then((User) => {
-      res.json(User);
+    .then((user) => {
+      res.json(user);
     });
   logger.log(
     "info",
@@ -219,6 +235,9 @@ exports.findallusersbyfname = (req, res) => {
     "from IP address "+
     req.ip
   );
+  mylogger.info(`Get request on findallusersbyfname route` +
+  "from IP address " +
+  req.ip);
 };
 
 var bcrypt = require('bcrypt');
@@ -227,13 +246,13 @@ const saltRounds = 10;
 // exports.testsignup = (req,res) => {
 //   var { fname, lname, email, file,pass } = req.body;
 //   bcrypt.hash(pass, saltRounds, function (err,   hash) {
-//   User.create({
+//   user.create({
 //     firstname: fname,
 //     lastname: lname,
 //     email: email,
 //     password:hash
-//   }).then((User) => {
-//       return res.json({"msg":"User Created Successfully"})
+//   }).then((user) => {
+//       return res.json({"msg":"user Created Successfully"})
 
 //     }).catch((error) => {
 //       // console.log(error.errors[0].message);
@@ -242,16 +261,17 @@ const saltRounds = 10;
 //   })
 // }
 
-exports.signup = async (req, res) => {
-  var { fname, lname, email, file,pass } = req.body;
+exports.advancedsignup = async (req, res) => {
+  var { fname, lname, email, file,pass,role } = req.body;
   const fileName = req.body.file;
   bcrypt.hash(pass, saltRounds, async (err,   hash) => {
-    await User.create({
+    await user.create({
       firstname: fname,
       lastname: lname,
       email: email,
+      role:role,
       password:hash
-    }).then((User) => {
+    }).then((user) => {
        /* sqs start*/
 
     {
@@ -298,7 +318,7 @@ exports.signup = async (req, res) => {
   //          fileStream.once('error', reject);
   //          s3.upload(
   //              {
-  //                  //User can upload objects but cannot view them (storing objects privately in bucket)
+  //                  //user can upload objects but cannot view them (storing objects privately in bucket)
   //                  // Bucket: bucketName,
   //                  // Key: keyName,
   //                  // Body: fileStream,
@@ -332,7 +352,7 @@ exports.signup = async (req, res) => {
   var mailOptions = {
     from: process.env.MAIL_SENDER,
     to: process.env.MAIL_RECEIVER,
-    subject: "New User Registered",
+    subject: "New user Registered",
     text: `Hello admin, New user named ${fname} ${lname} just registered onto your application. View Database for more information`,
   };
 
@@ -348,33 +368,160 @@ exports.signup = async (req, res) => {
   });
 
  /* mail end*/
-        return res.json({"msg":"User Created Successfully"})
+        return res.json({"msg":"user Created Successfully"})
 
       }).catch((error) => {
         // console.log(error.errors[0].message);
         console.log(error)
         logger.log('error',error)
-        return res.json({ "msg": error.errors[0].message});
+        return res.json({ "error": error.errors[0].message});
       })
     })
   logger.log("info",`Post request on createuser route http://localhost:${port}/api/`);
+  mylogger.info(`Post request on Signup route` +
+  "from IP address " +
+  req.ip);
+};
+
+exports.signup = async (req, res) => {
+  var { fname, lname, email, file,pass } = req.body;
+  const fileName = req.body.file;
+  bcrypt.hash(pass, saltRounds, async (err,   hash) => {
+    await user.create({
+      firstname: fname,
+      lastname: lname,
+      email: email,
+      password:hash
+    }).then((user) => {
+       /* sqs start*/
+
+    {
+      // Create an SQS service object
+      var sqs = new AWS.SQS({ apiVersion: "2012-11-05" });
+      var params = {
+        // Remove DelaySeconds parameter and value for FIFO queues
+        DelaySeconds: 10,
+        //send user email in queue body
+        MessageBody: email,
+        // MessageDeduplicationId: "TheWhistler",  // Required for FIFO queues
+        // MessageGroupId: "Group1",  // Required for FIFO queues
+        QueueUrl: process.env.QUEUE_URL,
+      };
+      sqs.sendMessage(params, function (err, data) {
+        if (err) {
+      console.log(err)
+          logger.log("error", err);
+        } else {
+          logger.log(
+            "info",
+            "Data moved to Queue Successfully"+
+            data.MessageId
+          );
+        }
+      });
+    }
+
+ /* sqs end*/
+
+ /* s3 start*/
+  // function uploadToS3(bucketName, keyPrefix, filePath) {
+  //      // ex: /path/to/my-picture.png becomes my-picture.png
+  //      var fileName = path.basename(filePath);
+  //      var fileStream = fs.createReadStream(filePath);
+
+  //      // If you want to save to "my-bucket/{prefix}/{filename}"
+  //      //                    ex: "my-bucket/my-pictures-folder/my-picture.png"
+  //      var keyName = path.join(keyPrefix, fileName);
+
+  //      // We wrap this in a promise so that we can handle a fileStream error
+  //      // since it can happen *before* s3 actually reads the first 'data' event
+  //      return new Promise(function(resolve, reject) {
+  //          fileStream.once('error', reject);
+  //          s3.upload(
+  //              {
+  //                  //user can upload objects but cannot view them (storing objects privately in bucket)
+  //                  // Bucket: bucketName,
+  //                  // Key: keyName,
+  //                  // Body: fileStream,
+  //                  // ContentType:'image/jpeg',
+  //                  // ACL:'private'
+
+  //                  //If we want user to upload the object and want to provide the public link to view the image (storing objects privately in bucket)
+  //                  Bucket:'baburaoapte',
+  //                  Key: keyName,
+  //                  Body: fileStream,
+  //                  ContentType:'image/jpeg',
+  //                  ACL:'public-read'
+  //              }
+  //          ).promise().then(resolve, reject);
+  //      });
+  //  }
+
+  //  await uploadToS3(process.env.BUCKET_NAME, req.body.fname, req.body.file).then(function (result) {
+  //      console.log("Uploaded to s3:", result);
+  //      console.log("Download Your Uploaded Item Here "+ result.Location);
+  //       req.profile.Location=result.Location;
+  //       console.log(req.body.file)
+  //    }).catch(function (err) {
+  //     logger.log('error','Upload to s3 failed ',err.toString());
+  //    });
+
+ /* s3 end*/
+
+ /* mail start*/
+
+  var mailOptions = {
+    from: process.env.MAIL_SENDER,
+    to: process.env.MAIL_RECEIVER,
+    subject: "New user Registered",
+    text: `Hello admin, New user named ${fname} ${lname} just registered onto your application. View Database for more information`,
+  };
+
+  transporter.sendMail(mailOptions, function (error, info) {
+    if (error) {
+      logger.log("error", error);
+      console.log(error);
+    } else {
+      console.log("Email sent: " + info.response);
+      logger.log('info',"Email sent: " + info.response)
+
+    }
+  });
+
+ /* mail end*/
+        return res.json({"msg":"user Created Successfully"})
+
+      }).catch((error) => {
+        // console.log(error.errors[0].message);
+        console.log(error)
+        logger.log('error',error)
+        return res.json({ "error": error.errors[0].message});
+      })
+    })
+  logger.log("info",`Post request on createuser route http://localhost:${port}/api/`);
+  mylogger.info(`Post request on Signup route` +
+  "from IP address " +
+  req.ip);
 };
 
 exports.findallusers = (req, res) => {
   if(req.profile.role!==0){
-    User.findAll()
+    user.findAll()
     .catch((error) => {
       logger.log("error", error);
       return res.json({ error: "No data exists" });
     })
-    .then((Users) => {
-      res.json(Users);
+    .then((users) => {
+      res.json(users);
     });
   }
   logger.log(
     "info",
     `get request on finall users route http://localhost:${port}/api/findallusers`+"from IP address "+req.ip
   );
+  mylogger.info(`Get request on findallusers route` +
+  "from IP address " +
+  req.ip);
 };
 
 // exports.getuserbyid = (req,res,next,id) => {
@@ -382,7 +529,7 @@ exports.findallusers = (req, res) => {
 // }
 
 exports.signin = (req,res) => {
-  User.findOne({
+  user.findOne({
     where:{
       email:req.body.email,
     }
@@ -398,7 +545,7 @@ exports.signin = (req,res) => {
       if(data==true)
         {
           //create token
-          const token = jwt.sign({ id: User.id }, process.env.SECRET,{expiresIn:'2h'});
+          const token = jwt.sign({ id: user.id }, process.env.SECRET,{expiresIn:'2h'});
           //put token in cookie
           let d=new Date();
           res.cookie("token", token, { expire: d.setTime(d.getTime() + (2*60*60*1000)),httpOnly: false});
@@ -415,6 +562,9 @@ exports.signin = (req,res) => {
         }
     })
   });
+  mylogger.info(`Post request on Signin route` +
+  "from IP address " +
+  req.ip);
 }
 
 exports.putpresignedurl = async (req,res) => {
@@ -430,6 +580,9 @@ exports.putpresignedurl = async (req,res) => {
   catch(err){
     console.log(err)
   }
+  mylogger.info(`Request on getpresignedurl route` +
+  "from IP address " +
+  req.ip);
 }
 
 exports.getpresignedurl = async (req,res) => {
@@ -448,11 +601,14 @@ exports.getpresignedurl = async (req,res) => {
     console.log(err)
     logger.log("error", err);
   }
+  mylogger.info(`Request on getpresignedurl route` +
+  "from IP address " +
+  req.ip);
   }
 
 //middleware
 exports.finduserbyid = (req, res, next,id) => {
-  // User.findOne({
+  // user.findOne({
   //   where:{
   //     id:req.params.id
   //   }
@@ -466,9 +622,9 @@ exports.finduserbyid = (req, res, next,id) => {
   //   console.log(req.profile)
   //   next();
   // })
-  User.findOne({
+  user.findOne({
     where:{
-      id:id
+      id:req.params.id
     }
   }).catch((err) => { 
     return res.json(err) 
@@ -480,9 +636,12 @@ exports.finduserbyid = (req, res, next,id) => {
     // console.log(req)
     next();
   })
+  mylogger.info(`Get Request on finduserbyid route` +
+  "from IP address " +
+  req.ip);
 };
 
-exports.getUser = (req, res) => {
+exports.getuser = (req, res) => {
   req.profile.password = undefined;
   console.log(req)
   return res.json(req.profile);
@@ -506,6 +665,9 @@ exports.isAuthenticated = (err,req, res, next) => {
     });
   }
   // console.log(req.profile)
+  mylogger.info(`Request on isAuthenticated route` +
+  "from IP address " +
+  req.ip);
   next();
 };
 
@@ -516,18 +678,26 @@ exports.isAdmin = (req, res, next) => {
       error: "You are not ADMIN, Access denied"
     });
   }
+  mylogger.info(`Request on isAdmin route` +
+  "from IP address " +
+  req.ip);
   next();
+
 };
 
 exports.signout = (req, res) => {
   res.clearCookie("token");
-  return res.json({
-    message: "User signout successfully"
-  });
   logger.log(
     "info",
     `get request on signout route http://localhost:${port}/api/signout`+"from IP address "+req.ip
   );
+  mylogger.info(`Request on Signout route` +
+  "from IP address " +
+  req.ip);
+  return res.json({
+    message: "user signout successfully"
+  });
+
 };
 
 // //protected routes
